kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq01
spec:
  selector:
    matchLabels:
      app: vprormq01
  replicas: 1
  template:
    metadata:
      labels:
        app: vprormq01
    spec:
      containers:
      - name: vprormq01
        image: rabbitmq
        ports:
        - containerPort: 5672
          name: vprormq-port
